@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+  		<meta charset="utf-8">
+  		<title>screensy</title>
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+	</head>
+	<body>
+	</body>
+</html>
+
